<resources>
    <string name="app_name">Bound</string>

    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search by Title, Author</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="add_to_library">Add to Library</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="in_library">In Library</string>
    <string name="on_wishlist">On Wishlist</string>
    <string name="empty_library">Empty!</string>

</resources>
